--- a/config/config.yaml
+++ b/config/config.yaml
@@ -17,3 +17,11 @@ data_validation:
 data_transformation:
   root_dir: artifacts/data_transformation
   data_path : artifacts/data_ingestion/unziped_data/winequality-red.csv
+
+
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  train_data_path: artifacts/data_transformation/test.csv
+  test_data_path: artifacts/data_transformation/train.csv
+  model_name: model.joblib
